--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Math Quiz with Operation Selection and Score</title>
- 
+  <a href="./quiz.html">Since</a> 
   <style>
     body {
       font-family: Arial, sans-serif;
