--- a/index.html
+++ b/index.html
@@ -1,184 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Math Quiz with Operation Selection and Score</title>
-  <a href="./quiz.html">Since</a> 
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 50px;
-      text-align: center;
-    }
-    input, button, select {
-      padding: 10px;
-      font-size: 16px;
-    }
-    select {
-      margin: 10px 0;
-    }
-    #score {
-      font-size: 20px;
-      font-weight: bold;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>All-in-One Quiz</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script>
 </head>
 <body>
-<h1>Welcome Aman </h1>
-<img src="./Image/Aman.PNG" alt="my sweet son"width="200px"  height="200px">
-  <h1>Math Quiz</h1>
 
-  <div>
-    <label for="level">Level:</label>
-    <select id="level" onchange="setLevel()">
-      <option value="1">Beginner</option>
-      <option value="2">Intermediate</option>
-      <option value="3">Advanced</option>
-    </select>
-  </div>
+  <h1>Welcome Aman</h1>
+  <img src="./Image/Aman.PNG" alt="my sweet son" width="200" height="200" />
 
-  <div>
-    <label for="operation">Select Operation:</label>
-    <select id="operation" onchange="setOperation()">
-      <option value="addition">Addition</option>
-      <!-- <option value="subtraction">Subtraction</option> -->
-      <option value="multiplication">Multiplication</option>
-      <!-- <option value="division">Division</option> -->
-    </select>
-  </div>
+  <hr>
 
-  <p id="score">Score: 0/0</p>
+  <h2>Multi-Level Subject Quiz</h2>
 
-  <div id="question"></div>
-  <input type="number" id="answer" placeholder="Enter your answer" />
-  <button onclick="checkAnswer()">Submit</button>
+  <label for="subject">Select Subject:</label>
+  <select id="subject">
+    <option value="mathOperation">Math Operation</option>
+    <option value="science">Science</option>
+    <option value="Geography">Geography</option>
+  </select>
 
-  <p id="result"></p>
+  <label for="operation">Operation:</label>
+  <select id="operation">
+    <option value="addition">Addition</option>
+    <option value="subtraction">Subtraction</option>
+    <option value="multiplication">Multiplication</option>
+    <option value="division">Division</option>
+  </select>
 
-  <script>
-    let correctAnswer;
-    let score = 0; // Correct answers
-    let totalQuestions = 0; // Total questions answered
-    let level = 1;  // Default level: Beginner
-    let operation = 'addition';  // Default operation: addition
+  <label for="levelSelect">Difficulty:</label>
+  <select id="levelSelect">
+    <option value="beginner">Beginner</option>
+    <option value="intermediate">Intermediate</option>
+    <option value="advanced">Advanced</option>
+  </select>
 
-    // Set level based on dropdown selection and reset quiz
-    function setLevel() {
-      level = parseInt(document.getElementById('level').value);
-      resetQuiz();
-      generateQuestion();
-    }
+  <button onclick="startQuiz()">Start Quiz</button>
 
-    // Set operation based on dropdown selection and reset quiz
-    function setOperation() {
-      operation = document.getElementById('operation').value;
-      resetQuiz();
-      generateQuestion();
-    }
+  <div id="quiz-container"></div>
+  <button onclick="submitQuiz()" style="display:none;" id="submit-btn">Submit Answers</button>
+  <div id="quiz-result"></div>
 
-    // Reset the score and total questions
-    function resetQuiz() {
-      score = 0;
-      totalQuestions = 0;
-      document.getElementById('score').textContent = `Score: ${score}/0`;
-    }
+  <!-- <script>
+    const quizData = {
+      science: {
+        beginner: [
+          { question: "What planet do we live on?", options: ["Mars", "Earth", "Venus", "Jupiter"], answer: "Earth" },
+          { question: "Water freezes at ___ °C?", options: ["0", "100", "10", "-5"], answer: "0" }
+        ],
+        intermediate: [
+          { question: "What gas do plants absorb?", options: ["Oxygen", "Nitrogen", "Carbon Dioxide", "Hydrogen"], answer: "Carbon Dioxide" },
+          { question: "How many bones in adult human body?", options: ["206", "205", "208", "210"], answer: "206" }
+        ],
+        advanced: [
+          { question: "What is the chemical symbol for gold?", options: ["Gd", "Au", "Ag", "Go"], answer: "Au" },
+          { question: "What is Newton's Third Law?", options: [
+            "For every action, there is an equal and opposite reaction",
+            "F = ma",
+            "Objects in motion stay in motion",
+            "Energy is conserved"
+          ], answer: "For every action, there is an equal and opposite reaction" }
+        ]
+      },
+      Geography: {
+        beginner: [
+          { question: "What is the largest of the seven continents?", options: ["Europe", "Asia", "South America"], answer: "Asia" },
+          { question: "Which of the following is not a part of Antarctica?", options: ["The Arctic Circle", "The Vinson Massif", "The Ross Ice Shelf"], answer: "The Vinson Massif" },
+          { question: "Which continent has the same name as a country?", options: ["Asia", "Europe", "Africa"], answer: "Europe" },
+          { question: "This continent is very cold. What is it called?", options: ["Antarctica", "Asia", "South America"], answer: "Antarctica" },
+          { question: "How many continents are there?", options: ["3", "7", "11", "6"], answer: "7" }
+        ],
+        intermediate: [
+          { question: "Which island is part of the Australian continent?", options: ["Sri Lanka", "Madagascar", "Tasmania"], answer: "Tasmania" },
+          { question: "What is 100 / 4?", options: ["20", "25", "30", "40"], answer: "25" }
+        ],
+        advanced: [
+          { question: "Solve: 2x + 3 = 9", options: ["x=1", "x=2", "x=3", "x=4"], answer: "x=3" },
+          { question: "What is the derivative of x^2?", options: ["x", "2x", "x^2", "2"], answer: "2x" }
+        ]
+      }
+    };
 
-    // Generate a random integer within a specific range
+    let selectedQuestions = [];
+
     function getRandomInt(min, max) {
       return Math.floor(Math.random() * (max - min + 1)) + min;
     }
 
-    // Generate question based on selected operation and level
-    function generateQuestion() {
-      let num1, num2;
-      
-      // Set number ranges based on difficulty level
-      if (level === 1) {  // Beginner (1-10)
-        num1 = getRandomInt(1, 10);
-        num2 = getRandomInt(1, 10);
-      } else if (level === 2) {  // Intermediate (1-50)
-        num1 = getRandomInt(1, 50);
-        num2 = getRandomInt(1, 50);
-      } else if (level === 3) {  // Advanced (1-100)
-        num1 = getRandomInt(1, 100);
-        num2 = getRandomInt(1, 100);
-      }
+    function generateMathQuestions(level, operation) {
+  const questions = [];
+  const levelRange = level === "beginner" ? 10 : level === "intermediate" ? 50 : 100;
 
-      let questionText = `${num1} ${operationSymbol(operation)} ${num2}`;
-      
-      // Ensure valid subtraction and division
-      if (operation === 'subtraction') {
-        // Ensure num1 is greater than or equal to num2 for valid subtraction
-        if (num1 < num2) {
-          let temp = num1;
-          num1 = num2;
-          num2 = temp;
-        }
-        correctAnswer = num1 - num2;
-      }
+  for (let i = 0; i < 5; i++) {
+    let num1, num2, correct, symbol;
 
-      if (operation === 'division') {
-        // Ensure num1 is divisible by num2 (no remainder) and num1 >= num2
-        num2 = getRandomInt(1, num1);  // Divisor is always smaller than or equal to the dividend
-        while (num1 % num2 !== 0) {
-          num2 = getRandomInt(1, num1); // Keep generating num2 until num1 is divisible by num2
-        }
-        correctAnswer = num1 / num2;
-      }
-
-      // Handle other operations
-      if (operation === 'addition') {
-        correctAnswer = num1 + num2;
-      }
-      if (operation === 'multiplication') {
-        correctAnswer = num1 * num2;
-      }
-
-      document.getElementById('question').textContent = `What is ${questionText}?`;
-      document.getElementById('result').textContent = '';
-      document.getElementById('answer').value = '';
+    if (operation === "addition") {
+      num1 = getRandomInt(1, levelRange);
+      num2 = getRandomInt(1, levelRange);
+      correct = num1 + num2;
+      symbol = '+';
+    } else if (operation === "subtraction") {
+      num1 = getRandomInt(1, levelRange);
+      num2 = getRandomInt(1, num1); // ensures num1 >= num2
+      correct = num1 - num2;
+      symbol = '-';
+    } else if (operation === "multiplication") {
+      num1 = getRandomInt(1, levelRange);
+      num2 = getRandomInt(1, levelRange);
+      correct = num1 * num2;
+      symbol = '×';
+    } else if (operation === "division") {
+      num2 = getRandomInt(1, levelRange);
+      correct = getRandomInt(1, levelRange);
+      num1 = num2 * correct; // ensures no remainder
+      symbol = '÷';
     }
 
-    // Return the correct symbol for the selected operation
-    function operationSymbol(operation) {
-      switch(operation) {
-        case 'addition': return '+';
-        case 'subtraction': return '-';
-        case 'multiplication': return '*';
-        case 'division': return '/';
+    const questionText = `What is ${num1} ${symbol} ${num2}?`;
+    const options = generateOptions(correct);
+
+    questions.push({
+      question: questionText,
+      options,
+      answer: correct.toString()
+    });
+  }
+
+  return questions;
+}
+
+
+    function generateOptions(correct) {
+      const options = new Set();
+      options.add(correct.toString());
+      while (options.size < 4) {
+        const offset = getRandomInt(-10, 10);
+        const distractor = correct + offset;
+        if (distractor !== correct && distractor >= 0) {
+          options.add(distractor.toString());
+        }
       }
+      return Array.from(options).sort(() => Math.random() - 0.5);
     }
 
-    // Check user's answer, update score, and generate a new question
-    function checkAnswer() {
-      const userAnswer = parseFloat(document.getElementById('answer').value);
-      const resultEl = document.getElementById('result');
+    function startQuiz() {
+      const subject = document.getElementById("subject").value;
+      const level = document.getElementById("levelSelect").value;
+      const operation = document.getElementById("operation").value;
+      const quizContainer = document.getElementById("quiz-container");
+      quizContainer.innerHTML = "";
+      selectedQuestions = [];
 
-      if (isNaN(userAnswer)) {
-        resultEl.textContent = "Please enter a valid number.";
-        return;
-      }
-
-      totalQuestions++; // Increment the total question count
-
-      if (Math.abs(userAnswer - correctAnswer) < 0.01) {
-        resultEl.textContent = "✅ Correct!";
-        score++;  // Increment score if correct
+      if (subject === "mathOperation") {
+        selectedQuestions = generateMathQuestions(level, operation);
       } else {
-        resultEl.textContent = `❌ Incorrect. The correct answer was ${correctAnswer}`;
+        selectedQuestions = quizData[subject][level];
       }
 
-      // Update the score display in "X/Y" format
-      document.getElementById('score').textContent = `Score: ${score}/${totalQuestions}`;
+      selectedQuestions.forEach((q, i) => {
+        const questionDiv = document.createElement("div");
+        questionDiv.classList.add("question");
+        questionDiv.innerHTML = `<strong>${i + 1}. ${q.question}</strong>`;
 
-      // Generate a new question after answering
-      generateQuestion();
+        const answersDiv = document.createElement("div");
+        answersDiv.classList.add("answers");
+
+        q.options.forEach(option => {
+          answersDiv.innerHTML += `
+            <label>
+              <input type="radio" name="q${i}" value="${option}" />
+              ${option}
+            </label><br/>
+          `;
+        });
+
+        quizContainer.appendChild(questionDiv);
+        quizContainer.appendChild(answersDiv);
+      });
+
+      document.getElementById("submit-btn").style.display = "inline-block";
+      document.getElementById("quiz-result").innerHTML = "";
     }
 
-    // Generate the first question
-    generateQuestion();
-  </script>
+    function submitQuiz() {
+      let score = 0;
 
+      selectedQuestions.forEach((q, i) => {
+        const selected = document.querySelector(`input[name="q${i}"]:checked`);
+        if (selected && selected.value === q.answer) {
+          score++;
+        }
+      });
+
+      document.getElementById("quiz-result").innerHTML = `<h3>You scored ${score} out of ${selectedQuestions.length}</h3>`;
+    }
+  </script> -->
 </body>
 </html>
