updating the link

--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     Clik on your Name
     </p>
     <a href="./home.html"> Abimelek</a>
-    <a href="./index.html">Aman </a>  
+    <a href="./welcom.html">Aman </a>  
 </body>
 </html>
