fixing math operations

--- a/welcom.html
+++ b/welcom.html
@@ -19,7 +19,7 @@
 <label for="subject">Select Subject:</label> 
 
   <select id="subject" onchange="handleSubjectChange()">
-    <option value="math">Math</option>  
+    <option value="mathOperation">Math</option>  
     <option value="science">Science</option>
     <option value="Geography">Geography</option>
   </select>
